update jupyter notebook

--- a/web_scraping_project/wikipedia_scraper.ipynb
+++ b/web_scraping_project/wikipedia_scraper.ipynb
@@ -43221,77 +43221,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {
     "id": "Kt6JtKDpOAIe"
    },
    "outputs": [],
    "source": [
-    "# <25 lines\n",
-    "from requests import Session\n",
     "import time\n",
+    "from requests import Session\n",
+    "from bs4 import BeautifulSoup\n",
+    "import re\n",
     "\n",
-    "def session_loop_request(session, url, cookies=None, params=None, retry=False):    \n",
+    "# Function to handle session-based requests\n",
+    "def session_request(session, url, cookies=None, params=None, retry=False):\n",
     "    response = session.get(url, cookies=cookies, params=params)\n",
-    "    if response.status_code == 403 and not retry:       #this fix the cookie expired problem  \n",
+    "    \n",
+    "    # Handle expired cookies and retry\n",
+    "    if response.status_code == 403 and not retry:\n",
     "        print(\"Cookie expired. Refreshing cookie and retrying...\")\n",
     "        new_cookie = refresh_cookie(session)\n",
-    "        return session_loop_request(session, url, cookies=new_cookie, params=params, retry=True)\n",
-    "    response.raise_for_status()\n",
+    "        return session_request(session, url, cookies=new_cookie, params=params, retry=True)\n",
+    "    \n",
+    "    response.raise_for_status()  # If the status code is not 200, it will raise an error.\n",
+    "    \n",
     "    if \"json\" in response.headers.get(\"Content-Type\", \"\"):\n",
-    "        return response.json()\n",
-    "    return response.text\n",
+    "        return response.json()  # Return JSON data if it's in the response.\n",
+    "    \n",
+    "    return response.text  # Return text if it's not JSON.\n",
     "\n",
-    "def refresh_cookie(session): #this fix the cookie expired problem    \n",
+    "# Function to refresh the session cookie\n",
+    "def refresh_cookie(session):\n",
     "    root_url = \"https://country-leaders.onrender.com\"\n",
     "    cookie_url = f\"{root_url}/cookie\"\n",
     "    return session.get(cookie_url).cookies\n",
     "\n",
+    "# Function to get leaders information from the API\n",
     "def get_leaders():\n",
-    "    root_url = \"https://country-leaders.onrender.com\"    \n",
-    "    with Session() as session:        \n",
+    "    root_url = \"https://country-leaders.onrender.com\"\n",
+    "    \n",
+    "    # Start a session\n",
+    "    with Session() as session:\n",
+    "        # Check the status of the site\n",
     "        status_url = f\"{root_url}/status\"\n",
     "        status_response = session.get(status_url)\n",
     "        if status_response.status_code == 200:\n",
     "            print(status_response.text)\n",
     "        else:\n",
-    "            print(f\"Error accessing the website: {status_response.status_code}\")        \n",
+    "            print(f\"Error accessing the website: {status_response.status_code}\")\n",
+    "            return {}\n",
+    "        \n",
+    "        # Get the list of countries\n",
     "        cookie = refresh_cookie(session)\n",
     "        countries_url = f\"{root_url}/countries\"\n",
-    "        countries = session_loop_request(session, countries_url, cookies=cookie)        \n",
+    "        countries = session_request(session, countries_url, cookies=cookie)\n",
+    "        \n",
     "        leaders_per_country = {}\n",
     "        leaders_url = f\"{root_url}/leaders\"\n",
+    "        \n",
+    "        # Loop through each country and get their leaders\n",
     "        for country in countries:\n",
     "            country_leaders = {}\n",
-    "            leaders_data = session_loop_request(session, leaders_url, cookies=cookie, params={\"country\": country})            \n",
+    "            leaders_data = session_request(session, leaders_url, cookies=cookie, params={\"country\": country})\n",
+    "            \n",
     "            for leader in leaders_data:\n",
     "                full_name = f\"{leader.get('first_name')} {leader.get('last_name')}\"\n",
     "                wikipedia_url = leader.get('wikipedia_url')\n",
-    "                if wikipedia_url:                    \n",
+    "                \n",
+    "                # If a Wikipedia URL is available, get the first paragraph from the page\n",
+    "                if wikipedia_url:\n",
     "                    first_paragraph = get_first_paragraph(session, wikipedia_url)\n",
     "                    country_leaders[full_name] = first_paragraph\n",
-    "                    print(f\"Leader of {country}: {full_name}, First Paragraph: {first_paragraph}\")            \n",
-    "            leaders_per_country[country] = country_leaders\n",
-    "            time.sleep(0.5)  # delay between countries to avoid overload\n",
+    "                    print(f\"Leader of {country}: {full_name}, First Paragraph: {first_paragraph}\")\n",
     "            \n",
+    "            leaders_per_country[country] = country_leaders\n",
+    "            time.sleep(0.5)  # Adding a small delay to avoid overloading the server\n",
+    "        \n",
     "    return leaders_per_country\n",
     "\n",
-    "def get_first_paragraph(session, wikipedia_url):    \n",
+    "# Function to extract the first paragraph from a Wikipedia page\n",
+    "def get_first_paragraph(session, wikipedia_url):\n",
     "    print(wikipedia_url)\n",
     "    response = session.get(wikipedia_url)\n",
-    "    response.raise_for_status()\n",
+    "    response.raise_for_status()  # Make sure the response is successful\n",
+    "    \n",
+    "    # Parse the HTML content\n",
     "    soup = BeautifulSoup(response.text, 'html.parser')\n",
     "    paragraphs = soup.find_all('p')\n",
+    "    \n",
     "    first_paragraph = None\n",
     "    for paragraph in paragraphs:\n",
-    "        text = paragraph.get_text(separator=\" \",strip=True)# this fix the words problem\n",
-    "        if text:\n",
+    "        text = paragraph.get_text(separator=\" \", strip=True)  # Clean up the text\n",
+    "        \n",
+    "        if text:  # If the paragraph has text\n",
     "            first_paragraph = text\n",
-    "            break \n",
-    "    if first_paragraph: \n",
-    "        first_paragraph = re.sub(r'\\(\\[\\s?.*?\\s?\\]\\s?\\/.*?;?\\)|\\[\\s?[a-zA-Z0-9]\\s?\\]', '', first_paragraph) #this fix refefences[1],[a]   \n",
-    "       \n",
-    "    return first_paragraph"
+    "            break  # We only need the first non-empty paragraph\n",
+    "    \n",
+    "    # Clean up any references or citation markers (e.g., [1], [a], etc.)\n",
+    "    if first_paragraph:\n",
+    "        first_paragraph = re.sub(r'\\(\\[\\s?.*?\\s?\\]\\s?\\/.*?;?\\)|\\[\\s?[a-zA-Z0-9]\\s?\\]', '', first_paragraph)\n",
+    "    \n",
+    "    return first_paragraph\n",
+    "\n"
    ]
   },
   {
@@ -43306,7 +43336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {
     "id": "p5wFE6ivRf-Z"
    },
@@ -43406,6 +43436,7 @@
       "Leader of us: Rutherford Hayes, First Paragraph: Rutherford Birchard Hayes ( / ˈ r ʌ ð ər f ər d / ⓘ ; October 4, 1822 – January 17, 1893) was the 19th president of the United States , serving from 1877 to 1881. A staunch abolitionist from Ohio , he was also a brevet major general for the Union army during the American Civil War .\n",
       "https://en.wikipedia.org/wiki/Calvin_Coolidge\n",
       "Leader of us: John Coolidge, First Paragraph: Calvin Coolidge (born John Calvin Coolidge Jr.  / ˈ k uː l ɪ dʒ / KOOL -ij ; July 4, 1872 – January 5, 1933) was the 30th president of the United States , serving from 1923 to 1929. A Republican lawyer from Massachusetts , he previously served as the 29th vice president from 1921 to 1923 under President Warren G. Harding , and as the 48th governor of Massachusetts from 1919 to 1921. Coolidge gained a reputation as a small-government conservative with a taciturn personality and dry sense of humor that earned him the nickname \"Silent Cal\".\n",
+      "Cookie expired. Refreshing cookie and retrying...\n",
       "https://nl.wikipedia.org/wiki/Guy_Verhofstadt\n",
       "Leader of be: Guy Verhofstadt, First Paragraph: Guy Maurice Marie-Louise Verhofstadt  ( uitspraak ⓘ ) ( Dendermonde , 11 april 1953 ) is een Belgisch politicus voor de Open Vlaamse Liberalen en Democraten (Open Vld). Hij was premier van België van 12 juli 1999 tot 20 maart 2008 in drie regeringen. Hij beëindigde zijn actieve politieke carrière in het Europees Parlement , waar hij van 2009 tot 2019 fractieleider van de Alliantie van Liberalen en Democraten voor Europa (ALDE) was. \n",
       "https://nl.wikipedia.org/wiki/Yves_Leterme\n",
@@ -43512,6 +43543,7 @@
       "Leader of be: Charles Michel, First Paragraph: Charles Yves Jean Ghislaine Michel ( Namen , 21 december 1975 ) is een Belgisch politicus voor de partij Mouvement Réformateur (MR). Van 11 oktober 2014 tot 27 oktober 2019 was hij premier van België in de regeringen Michel I en Michel II . Op 2 juli 2019 werd hij verkozen als voorzitter van de Europese Raad , in opvolging van Donald Tusk , een functie die hij van 1 december 2019 tot 30 november 2024 uitoefende.\n",
       "https://nl.wikipedia.org/wiki/Sophie_Wilm%C3%A8s\n",
       "Leader of be: Sophie Wilmès, First Paragraph: Sophie Wilmès ( Elsene , 15 januari 1975 ) is een Belgisch politica van de MR . Van 27 oktober 2019 tot 1 oktober 2020 was ze de eerste vrouwelijke premier van België.  Vanaf 1 oktober 2020 was ze vicepremier en minister van Buitenlandse Zaken en Buitenlandse Handel. Om familiale redenen legde ze op 21 april 2022 haar bevoegdheden als minister tijdelijk neer. Op 15 juli 2022 legde ze haar functie definitief neer.\n",
+      "Cookie expired. Refreshing cookie and retrying...\n",
       "https://ar.wikipedia.org/wiki/%D9%85%D8%AD%D9%85%D8%AF_%D8%A7%D9%84%D8%B3%D8%A7%D8%AF%D8%B3_%D8%A8%D9%86_%D8%A7%D9%84%D8%AD%D8%B3%D9%86\n",
       "Leader of ma: Mohammed None, First Paragraph: مُحمد السادس بن الحسن الثاني العلوي (مواليد 21 أغسطس 1963) هو ملك المملكة المغربية منذ عام 1999 والملك الثالث والعشرون للمغرب من سلالة العلويين الفيلاليين ، تولى الحكم خلفًا لوالده الملك الحسن الثاني بعد وفاته، وبويع ملكًا يوم الجمعة 9 ربيع الثاني سنة 1420 هـ الموافق 23 يوليو 1999 بالقصر الملكي بالرباط .\n",
       "https://ar.wikipedia.org/wiki/%D8%A7%D9%84%D8%AD%D8%B3%D9%86_%D8%A7%D9%84%D8%AB%D8%A7%D9%86%D9%8A_%D8%A8%D9%86_%D9%85%D8%AD%D9%85%D8%AF\n",
@@ -43520,12 +43552,14 @@
       "Leader of ma: Mohammed None, First Paragraph: هذه نسخة متحقق منها من هذه الصفحة\n",
       "https://ar.wikipedia.org/wiki/%D8%A7%D9%84%D9%82%D8%A7%D8%A6%D9%85_%D8%A8%D8%A3%D9%85%D8%B1_%D8%A7%D9%84%D9%84%D9%87_%D8%A7%D9%84%D8%B3%D8%B9%D8%AF%D9%8A\n",
       "Leader of ma: Mohammed None, First Paragraph: هذه نسخة متحقق منها من هذه الصفحة\n",
+      "Cookie expired. Refreshing cookie and retrying...\n",
       "https://ru.wikipedia.org/wiki/%D0%9F%D1%83%D1%82%D0%B8%D0%BD,_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B8%D1%87\n",
       "Leader of ru: Vladimir Putin, First Paragraph: Влади́мир Влади́мирович Пу́тин (род. 7 октября 1952 , Ленинград , РСФСР , СССР ) — российский государственный и политический деятель. Действующий президент Российской Федерации , председатель Государственного Совета Российской Федерации и Совета Безопасности Российской Федерации ; Верховный главнокомандующий Вооружёнными силами Российской Федерации с 7 мая 2012 года. Ранее занимал должность президента с 7 мая 2000 по 7 мая 2008 года, также в 1999—2000 и 2008—2012 годах занимал должность председателя правительства Российской Федерации . Фактически руководит Россией, согласно разным оценкам, с 1999  или с 2000 года  . В сентябре 2017 года Путин стал самым долго правящим российским лидером после Иосифа Сталина   , а после окончания пятого президентского срока станет таковым со времён Екатерины II  .\n",
       "https://ru.wikipedia.org/wiki/%D0%9C%D0%B5%D0%B4%D0%B2%D0%B5%D0%B4%D0%B5%D0%B2,_%D0%94%D0%BC%D0%B8%D1%82%D1%80%D0%B8%D0%B9_%D0%90%D0%BD%D0%B0%D1%82%D0%BE%D0%BB%D1%8C%D0%B5%D0%B2%D0%B8%D1%87\n",
       "Leader of ru: Dmitry Medvedev, First Paragraph: иностранные:\n",
       "https://ru.wikipedia.org/wiki/%D0%95%D0%BB%D1%8C%D1%86%D0%B8%D0%BD,_%D0%91%D0%BE%D1%80%D0%B8%D1%81_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B5%D0%B2%D0%B8%D1%87\n",
       "Leader of ru: Boris Yeltsin, First Paragraph: Бори́с Никола́евич Е́льцин ( 1 февраля 1931 ( 1931-02-01 ) , Бутка , Буткинский район , Уральская область , РСФСР , СССР — 23 апреля 2007 , Москва , Россия ) — советский и российский партийный , государственный и политический деятель, первый всенародно избранный Президент Российской Федерации ( 1991—1999 ) ➤ ; в ноябре 1991 — июне 1992 года одновременно возглавлял правительство . С марта по май 1992 года исполнял обязанности министра обороны Российской Федерации .\n",
+      "Cookie expired. Refreshing cookie and retrying...\n",
       "https://fr.wikipedia.org/wiki/Fran%C3%A7ois_Hollande\n",
       "Leader of fr: François Hollande, First Paragraph: Pour les articles homonymes, voir Hollande (homonymie) .\n",
       "https://fr.wikipedia.org/wiki/Nicolas_Sarkozy\n",
@@ -43592,7 +43626,8 @@
     }
    ],
    "source": [
-    "leaders_data = get_leaders()"
+    "# Call the function to get leaders file\n",
+    "leaders_file = get_leaders()"
    ]
   },
   {
@@ -43609,7 +43644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {
     "id": "pTNGKKrOjNDk"
    },
@@ -43829,6 +43864,7 @@
       "Leader of ru: Dmitry Medvedev, First Paragraph: иностранные:\n",
       "https://ru.wikipedia.org/wiki/%D0%95%D0%BB%D1%8C%D1%86%D0%B8%D0%BD,_%D0%91%D0%BE%D1%80%D0%B8%D1%81_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B5%D0%B2%D0%B8%D1%87\n",
       "Leader of ru: Boris Yeltsin, First Paragraph: Бори́с Никола́евич Е́льцин ( 1 февраля 1931 ( 1931-02-01 ) , Бутка , Буткинский район , Уральская область , РСФСР , СССР — 23 апреля 2007 , Москва , Россия ) — советский и российский партийный , государственный и политический деятель, первый всенародно избранный Президент Российской Федерации ( 1991—1999 ) ➤ ; в ноябре 1991 — июне 1992 года одновременно возглавлял правительство . С марта по май 1992 года исполнял обязанности министра обороны Российской Федерации .\n",
+      "Cookie expired. Refreshing cookie and retrying...\n",
       "https://fr.wikipedia.org/wiki/Fran%C3%A7ois_Hollande\n",
       "Leader of fr: François Hollande, First Paragraph: Pour les articles homonymes, voir Hollande (homonymie) .\n",
       "https://fr.wikipedia.org/wiki/Nicolas_Sarkozy\n",
@@ -43915,7 +43951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {
     "id": "4VwNjBYyjPzs"
    },
@@ -43947,7 +43983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "metadata": {
     "id": "EfknpnTljqUd"
    },
@@ -43962,7 +43998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 58,
    "metadata": {
     "id": "lWQ6bbn31cix"
    },
@@ -44176,12 +44212,14 @@
       "Leader of ma: Mohammed None, First Paragraph: هذه نسخة متحقق منها من هذه الصفحة\n",
       "https://ar.wikipedia.org/wiki/%D8%A7%D9%84%D9%82%D8%A7%D8%A6%D9%85_%D8%A8%D8%A3%D9%85%D8%B1_%D8%A7%D9%84%D9%84%D9%87_%D8%A7%D9%84%D8%B3%D8%B9%D8%AF%D9%8A\n",
       "Leader of ma: Mohammed None, First Paragraph: هذه نسخة متحقق منها من هذه الصفحة\n",
+      "Cookie expired. Refreshing cookie and retrying...\n",
       "https://ru.wikipedia.org/wiki/%D0%9F%D1%83%D1%82%D0%B8%D0%BD,_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B8%D1%87\n",
       "Leader of ru: Vladimir Putin, First Paragraph: Влади́мир Влади́мирович Пу́тин (род. 7 октября 1952 , Ленинград , РСФСР , СССР ) — российский государственный и политический деятель. Действующий президент Российской Федерации , председатель Государственного Совета Российской Федерации и Совета Безопасности Российской Федерации ; Верховный главнокомандующий Вооружёнными силами Российской Федерации с 7 мая 2012 года. Ранее занимал должность президента с 7 мая 2000 по 7 мая 2008 года, также в 1999—2000 и 2008—2012 годах занимал должность председателя правительства Российской Федерации . Фактически руководит Россией, согласно разным оценкам, с 1999  или с 2000 года  . В сентябре 2017 года Путин стал самым долго правящим российским лидером после Иосифа Сталина   , а после окончания пятого президентского срока станет таковым со времён Екатерины II  .\n",
       "https://ru.wikipedia.org/wiki/%D0%9C%D0%B5%D0%B4%D0%B2%D0%B5%D0%B4%D0%B5%D0%B2,_%D0%94%D0%BC%D0%B8%D1%82%D1%80%D0%B8%D0%B9_%D0%90%D0%BD%D0%B0%D1%82%D0%BE%D0%BB%D1%8C%D0%B5%D0%B2%D0%B8%D1%87\n",
       "Leader of ru: Dmitry Medvedev, First Paragraph: иностранные:\n",
       "https://ru.wikipedia.org/wiki/%D0%95%D0%BB%D1%8C%D1%86%D0%B8%D0%BD,_%D0%91%D0%BE%D1%80%D0%B8%D1%81_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B5%D0%B2%D0%B8%D1%87\n",
       "Leader of ru: Boris Yeltsin, First Paragraph: Бори́с Никола́евич Е́льцин ( 1 февраля 1931 ( 1931-02-01 ) , Бутка , Буткинский район , Уральская область , РСФСР , СССР — 23 апреля 2007 , Москва , Россия ) — советский и российский партийный , государственный и политический деятель, первый всенародно избранный Президент Российской Федерации ( 1991—1999 ) ➤ ; в ноябре 1991 — июне 1992 года одновременно возглавлял правительство . С марта по май 1992 года исполнял обязанности министра обороны Российской Федерации .\n",
+      "Cookie expired. Refreshing cookie and retrying...\n",
       "https://fr.wikipedia.org/wiki/Fran%C3%A7ois_Hollande\n",
       "Leader of fr: François Hollande, First Paragraph: Pour les articles homonymes, voir Hollande (homonymie) .\n",
       "https://fr.wikipedia.org/wiki/Nicolas_Sarkozy\n",
