--- a/web_scraping_project/wikipedia_scraper.ipynb
+++ b/web_scraping_project/wikipedia_scraper.ipynb
@@ -43644,7 +43644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "metadata": {
     "id": "pTNGKKrOjNDk"
    },
@@ -43858,6 +43858,7 @@
       "Leader of ma: Mohammed None, First Paragraph: هذه نسخة متحقق منها من هذه الصفحة\n",
       "https://ar.wikipedia.org/wiki/%D8%A7%D9%84%D9%82%D8%A7%D8%A6%D9%85_%D8%A8%D8%A3%D9%85%D8%B1_%D8%A7%D9%84%D9%84%D9%87_%D8%A7%D9%84%D8%B3%D8%B9%D8%AF%D9%8A\n",
       "Leader of ma: Mohammed None, First Paragraph: هذه نسخة متحقق منها من هذه الصفحة\n",
+      "Cookie expired. Refreshing cookie and retrying...\n",
       "https://ru.wikipedia.org/wiki/%D0%9F%D1%83%D1%82%D0%B8%D0%BD,_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B8%D1%87\n",
       "Leader of ru: Vladimir Putin, First Paragraph: Влади́мир Влади́мирович Пу́тин (род. 7 октября 1952 , Ленинград , РСФСР , СССР ) — российский государственный и политический деятель. Действующий президент Российской Федерации , председатель Государственного Совета Российской Федерации и Совета Безопасности Российской Федерации ; Верховный главнокомандующий Вооружёнными силами Российской Федерации с 7 мая 2012 года. Ранее занимал должность президента с 7 мая 2000 по 7 мая 2008 года, также в 1999—2000 и 2008—2012 годах занимал должность председателя правительства Российской Федерации . Фактически руководит Россией, согласно разным оценкам, с 1999  или с 2000 года  . В сентябре 2017 года Путин стал самым долго правящим российским лидером после Иосифа Сталина   , а после окончания пятого президентского срока станет таковым со времён Екатерины II  .\n",
       "https://ru.wikipedia.org/wiki/%D0%9C%D0%B5%D0%B4%D0%B2%D0%B5%D0%B4%D0%B5%D0%B2,_%D0%94%D0%BC%D0%B8%D1%82%D1%80%D0%B8%D0%B9_%D0%90%D0%BD%D0%B0%D1%82%D0%BE%D0%BB%D1%8C%D0%B5%D0%B2%D0%B8%D1%87\n",
@@ -43932,8 +43933,10 @@
    ],
    "source": [
     "# 3 line\n",
+    "\n",
     "import json\n",
-    "#  save leaders data\n",
+    "\n",
+    "##  save leaders data\n",
     "leaders_per_country = get_leaders()\n",
     "with open('leaders.json', 'w') as json_file:\n",
     "    json.dump(leaders_per_country, json_file, indent=4)"
@@ -43951,7 +43954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {
     "id": "4VwNjBYyjPzs"
    },
@@ -43965,7 +43968,7 @@
     }
    ],
    "source": [
-    "# 3 lines\n",
+    "## 3 lines\n",
     "with open ('leaders.json', 'r') as file:\n",
     "    loaded_data = json.load(file)\n",
     "    print(loaded_data == leaders_per_country)\n",
@@ -43983,7 +43986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "metadata": {
     "id": "EfknpnTljqUd"
    },
@@ -43998,7 +44001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "metadata": {
     "id": "lWQ6bbn31cix"
    },
