update jupyter note book

--- a/web_scraping_project/wikipedia_scraper.ipynb
+++ b/web_scraping_project/wikipedia_scraper.ipynb
@@ -43221,7 +43221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "id": "Kt6JtKDpOAIe"
    },
@@ -43298,7 +43298,7 @@
     "        \n",
     "    return leaders_per_country\n",
     "\n",
-    "# Function to extract the first paragraph from a Wikipedia page\n",
+    "## Function to extract the first paragraph from a Wikipedia page\n",
     "def get_first_paragraph(session, wikipedia_url):\n",
     "    print(wikipedia_url)\n",
     "    response = session.get(wikipedia_url)\n",
