add leaders update jupyter notebook

--- a/web_scraping_project/wikipedia_scraper.ipynb
+++ b/web_scraping_project/wikipedia_scraper.ipynb
@@ -43881,7 +43881,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3 lines\n",
+    "## 3 lines\n",
     "def save(leaders_per_country):\n",
     "    with open('leaders.json', 'w') as file:\n",
     "        json.dump(leaders_per_country, file)\n",
