update jupyter notebook

--- a/web_scraping_project/wikipedia_scraper.ipynb
+++ b/web_scraping_project/wikipedia_scraper.ipynb
@@ -43127,9 +43127,10 @@
     "import re\n",
     "\n",
     "# Function to handle session-based requests\n",
+    "#session  simplifies managing cookies, improves performance, reduces redundant setup across requests,\n",
+    "\n",
     "def session_request(session, url, cookies=None, params=None, retry=False):\n",
     "    response = session.get(url, cookies=cookies, params=params)\n",
-    "    \n",
     "    # Handle expired cookies and retry\n",
     "    if response.status_code == 403 and not retry:\n",
     "        print(\"Cookie expired. Refreshing cookie and retrying...\")\n",
